--- a/kubernetes/multi-master/ansible/roles/etcd/templates/etcd.env.yml
+++ b/kubernetes/multi-master/ansible/roles/etcd/templates/etcd.env.yml
@@ -1,7 +1,7 @@
 ETCD_DATA_DIR={{ etcd_data_dir }}
 ETCD_ADVERTISE_CLIENT_URLS={{ etcd_client_url }}
 ETCD_INITIAL_ADVERTISE_PEER_URLS={{ etcd_peer_url }}
-ETCD_INITIAL_CLUSTER_STATE={% if etcd_cluster_is_healthy.rc != 0 | bool %}new{% else %}existing{% endif %}
+ETCD_INITIAL_CLUSTER_STATE={% if etcd_cluster_is_healthy is defined and  etcd_cluster_is_healthy.rc == 0  %}existing{% else %}new{% endif %}
 
 ETCD_LISTEN_CLIENT_URLS={{ etcd_client_url }},http://127.0.0.1:2379
 ETCD_ELECTION_TIMEOUT=500
