--- a/kubernetes/multi-master/ansible/roles/etcd/tasks/main.yml
+++ b/kubernetes/multi-master/ansible/roles/etcd/tasks/main.yml
@@ -1,9 +1,11 @@
 ---
+- meta: flush_handlers
+
 - name: refresh config | create etcd config file
   template:
     src: etcd.env.yml
     dest: /etc/etcd.env
-  notify: restart etcd
+#  notify: restart etcd
 
 - name: Install etcd launch script
   template:
@@ -11,11 +13,11 @@
     dest: /usr/local/bin/etcd
     owner: root
     mode: 0755
-  notify: restart etcd
+#  notify: restart etcd
 
 - name: Configure | Copy etcd.service systemd file
   template:
     src: etcd.service.yml
     dest: /etc/systemd/system/etcd.service
-  notify: restart etcd
+#  notify: restart etcd
   
